# rust-flashrom-programmer

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  serprog.rs  spi.rs  uart.rs
