[package]
name = "serprog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"

embassy-stm32 = { path = "external/embassy/embassy-stm32", features = ["nightly", "defmt", "unstable-pac", "stm32l476rg", "time-driver-any", "exti", "unstable-traits"]  }
embassy-executor = { path = "external/embassy/embassy-executor", features = ["defmt", "integrated-timers"] }
embassy-time = { path = "external/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { path = "external/embassy/embassy-futures", features = ["defmt"] }
embassy-sync = { path = "external/embassy/embassy-sync", features = ["defmt"] }
embassy-embedded-hal = { path = "external/embassy/embassy-embedded-hal" }
embassy-hal-common = { path = "external/embassy/embassy-hal-common" }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal-async = { version = "=0.2.0-alpha.0" }
embedded-io = "0.4.0"

[profile.dev]
lto = "thin"
opt-level = 3

[profile.release]
lto = "thin"
opt-level = 3
debug = 2
